Set up GUI Database with a new Window

--- a/Lab18_GUI_Entity/Lab18_GUI_Entity.csproj
+++ b/Lab18_GUI_Entity/Lab18_GUI_Entity.csproj
@@ -79,6 +79,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="MyNewWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model1.Context.cs">
@@ -95,6 +99,9 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Model1.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="MyNewWindow.xaml.cs">
+      <DependentUpon>MyNewWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Order.cs">
       <DependentUpon>Model1.tt</DependentUpon>
